--- a/src/app/product/product/product.component.html
+++ b/src/app/product/product/product.component.html
@@ -4,4 +4,5 @@
   <li>Preis: {{ product.price }}</li>
   <li>Gewicht: {{ product.weight }}</li>
 </ul>
-<button (click)="raisePrice()">Preis erhöhen</button>
+<ng-content />
+<button (click)="raisePrice()">Preis erhöhen</button> <br />
