--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<stn-product [product]="productParent" (priceChange)="onPriceChanged($event)" />
+<stn-product [product]="productParent" (priceChange)="onPriceChanged($event)">
+  <input type="number" #price />
+  <button (click)="changePrice(price.value)">Preis ändern</button>
+</stn-product>
