--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<stn-product [product]="productParent" (priceChange)="onPriceChanged($event)">
-  <input type="number" #price />
-  <button (click)="changePrice(price.value)">Preis ändern</button>
-</stn-product>
+<div
+  *ngFor="let prod of products; let isEven = even"
+  [ngClass]="{ 'grey-background': isEven }"
+>
+  <stn-product [product]="prod"></stn-product>
+</div>
