--- a/src/app/product/product/product.component.html
+++ b/src/app/product/product/product.component.html
@@ -1,8 +1,16 @@
-<ul>
-  <li>Id: {{ product.id }}</li>
-  <li id="name">Name: {{ product.name }}</li>
-  <li>Preis: {{ product.price }}</li>
-  <li>Gewicht: {{ product.weight }}</li>
-</ul>
-<ng-content />
-<button (click)="raisePrice()">Preis erhöhen</button> <br />
+<div
+  class="border"
+  [ngStyle]="styleConfig"
+  [ngClass]="{ 'border-green': product.price < 50 }"
+>
+  <ul>
+    <li>Id: {{ product.id }}</li>
+    <li id="name">Name: {{ product.name }}</li>
+    <li *ngIf="showPrice">Preis: {{ product.price }}</li>
+    <li>Gewicht: {{ product.weight }}</li>
+  </ul>
+  <input type="number" #price />
+  <button (click)="changePrice(price.value)">Preis ändern</button>
+  <button (click)="raisePrice()">Preis erhöhen</button> <br />
+  <button (click)="togglePrice()">Preis ein/ausblenden</button> <br />
+</div>
