--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar color="primary"><span>Stones</span></mat-toolbar> Heute ist
 {{ today | date : "fullDate" }}
-@for (prod of products | slice:0:3; track prod.id; let isEven = $even) {
-<mat-card [ngClass]="{ 'grey-background': isEven }">
+
+<stn-product-form (addProduct)="onAddProduct($event)" />
+
+@for (prod of products; track prod.id; let isOdd = $odd) {
+<mat-card [ngClass]="{ 'grey-background': isOdd }">
   <stn-product [product]="prod"></stn-product>
 </mat-card>
 }
