--- a/src/app/product/product-form/product-form.component.html
+++ b/src/app/product/product-form/product-form.component.html
@@ -2,19 +2,37 @@
   <mat-form-field>
     <mat-label>Name</mat-label>
     <input matInput formControlName="name" />
+    @if (productForm.controls.name.hasError('required')){
+    <mat-error>Pflichtfeld!!!!</mat-error>
+    } @if (productForm.controls.name.hasError('alphaNum')){
+    <mat-error>Nur Alphanummerische Werte!!!!!</mat-error>
+    }
   </mat-form-field>
   <br />
   <mat-form-field>
     <mat-label>Preis</mat-label>
     <input matInput type="number" formControlName="price" />
+    @if (productForm.controls.price.hasError('required')) {
+    <mat-error>Das ist ein Pflichtfeld!</mat-error>
+    } @if (productForm.controls.price.hasError('positiv')) {
+    <mat-error>Preis muss größer 0 sein!</mat-error>
+    }
   </mat-form-field>
   <br />
   <mat-form-field>
     <mat-label>Gewicht</mat-label>
     <input matInput type="number" formControlName="weight" />
+    @if (productForm.controls.weight.hasError('required')){
+    <mat-error>Pflichtfeld!!!!</mat-error>
+    }
   </mat-form-field>
   <br />
-  <button color="accent" mat-raised-button (click)="saveProduct()">
+  <button
+    [disabled]="productForm.invalid"
+    color="accent"
+    mat-raised-button
+    (click)="saveProduct()"
+  >
     Speichern
   </button>
 </form>
