--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 @for (prod of products; track prod.id; let isOdd = $odd) {
 <mat-card [ngClass]="{ 'grey-background': isOdd }">
   <stn-product [product]="prod"></stn-product>
-  {{ isOdd }}
+  <button [routerLink]="['/products/new', prod.id]">Produkt ändern</button>
 </mat-card>
 }
