--- a/src/app/product/product-form/product-form.component.html
+++ b/src/app/product/product-form/product-form.component.html
@@ -36,5 +36,7 @@
     Speichern
   </button>
 </form>
-{{ productForm.value | json }}
-ID {{ id }}
+{{ productForm.value | json }} <br />
+ID {{ id }}<br />
+Name andersrum: {{ nameReversed }} <br />
+Name Länge: {{ nameLength }}
